--- a/src/style.css
+++ b/src/style.css
@@ -38,6 +38,8 @@ form .display {
     display: flex;
     justify-content: flex-end;
     margin: 20px 0;
+    box-shadow: inset -8px -8px 15px rgba(106, 104, 104, 0.204), 5px 5px 15px rgba(109, 108, 108, 0.659);
+    border-radius: 15px;
 }
 
 form .display input {
